--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 2.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2021-06-14 17:47+0200\n"
+"PO-Revision-Date: 2021-06-21 15:28+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Last-Translator: \n"
 "Language: es\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/2.4.rst:3
 msgid "What's New in Python 2.4"
@@ -1441,6 +1441,10 @@ msgid ""
 "for the *locals* parameter.  Previously this had to be a regular Python "
 "dictionary.  (Contributed by Raymond Hettinger.)"
 msgstr ""
+"La expresión ``eval(expr, globals, locals)`` la función`execfile(filename, "
+"globals, locals)`` y la sentencia ``exec`` ahora aceptan cualquier tipo de "
+"mapeo para parámetros locales. Previamente esto era parte de un diccionario "
+"de Python. (Contribución de Raymond Hettinger.)"
 
 #: ../Doc/whatsnew/2.4.rst:906
 msgid ""
@@ -1449,6 +1453,10 @@ msgid ""
 "`TypeError` exception.  This makes them more suitable for use with variable "
 "length argument lists::"
 msgstr ""
+"La función incorporada`zip` y la función  `itertools.izip`ahora retornan una "
+"lista hacia si se llama sin argumentos. Previamente estos lanzaban una "
+"excepción de tipo :exc:`TypeError`. Esto lo hace mas apropiado de usar con "
+"listas de argumentos de longitud variable:"
 
 #: ../Doc/whatsnew/2.4.rst:921
 msgid ""
@@ -1457,16 +1465,24 @@ msgid ""
 "left behind would fool further imports of the same module into succeeding, "
 "leading to confusing errors.   (Fixed by Tim Peters.)"
 msgstr ""
+"Al Encontrar un error al importar un módulo ya no deja un objeto de módulo "
+"parcialmente inicializado en `` sys.modules ''. El objeto de módulo "
+"incompleto dejado atrás engañaría a otras importaciones del mismo módulo "
+"para que tuvieran éxito, lo que provocaría errores confusos. (Corregido por "
+"Tim Peters.)"
 
 #: ../Doc/whatsnew/2.4.rst:926
 msgid ""
 ":const:`None` is now a constant; code that binds a new value to  the name "
 "``None`` is now a syntax error. (Contributed by Raymond Hettinger.)"
 msgstr ""
+":const:`None`es ahora una constante, el código que une un nuevo valor con el "
+"nombre :const:`None` es ahora un error de sintaxis (Contribución de Raymond "
+"Hettinger)"
 
 #: ../Doc/whatsnew/2.4.rst:933
 msgid "Optimizations"
-msgstr ""
+msgstr "Optimizaciones"
 
 #: ../Doc/whatsnew/2.4.rst:935
 msgid ""
@@ -1476,6 +1492,11 @@ msgid ""
 "`items`, :meth:`iterkeys`, :meth:`itervalues`, and :meth:`iteritems`. "
 "(Contributed by Raymond Hettinger.)"
 msgstr ""
+"Los bucles internos para separar listas y tuplas fueron optimizados y ahora "
+"corren un tercio mas rapido. Los bucles internos para diccionarios tambien "
+"fueron optimizados resultando en una mejora en el rendimiento para :meth:"
+"`keys`, :meth:`values`, :meth:`items`, :meth:`iterkeys`, :meth:`itervalues`, "
+"y :meth:`iteritems`. (Contribución de Raymond Hettinger)"
 
 #: ../Doc/whatsnew/2.4.rst:941
 msgid ""
@@ -1486,6 +1507,14 @@ msgid ""
 "was also optimized and no longer converts its argument into a temporary list "
 "before extending the base list.  (Contributed by Raymond Hettinger.)"
 msgstr ""
+"El mecanismo para mejorar y contraer listas fue optimizada  para efectos de "
+"velocidad y eficiencia en la utilización de recursos. Anexar y quitar "
+"elementos de una lista es ahora mas rápido debido al código mas eficiente y "
+"al menos frecuente uso de la función subyacente  :c:func:`realloc`. Las "
+"listas por comprensión también son beneficiadas, el método :meth:`list."
+"extend` fue también optimizado y ya no convierte mas el argumento en una "
+"lista temporal antes de extender la lista base. (Contribución de Raymond "
+"Hettinger)"
 
 #: ../Doc/whatsnew/2.4.rst:948
 msgid ""
@@ -1493,6 +1522,9 @@ msgid ""
 "now run several times faster with non-sequence arguments that supply a :meth:"
 "`__len__` method.  (Contributed by Raymond Hettinger.)"
 msgstr ""
+"Las funciones :func:`list`, :func:`tuple`, :func:`map`, :func:`filter` y :"
+"func:`zip` ahora corren mucho mas rápido con argumentos no secuenciales que "
+"ahora suministra el método :meth:`__len__`. (Contribución Raymond Hettinger.)"
 
 #: ../Doc/whatsnew/2.4.rst:952
 msgid ""
@@ -1503,6 +1535,12 @@ msgid ""
 "arguments to functionals: ``map(mydict.__getitem__, keylist)``. (Contributed "
 "by Raymond Hettinger.)"
 msgstr ""
+"Los métodos :meth:`list.__getitem__`, :meth:`dict.__getitem__` y :meth:`dict."
+"__contains__`  ahora son implementados como objetos de la clase "
+"`method_descriptor` en vez de los objetos de la clase `wrapper_descriptor` . "
+"Este acceso dobla el rendimiento y hace que sea mas apropiado para ser usado "
+"como argumentos de:``map(mydict.__getitem__, keylist)``. (Contribución de "
+"Raymond Hettinger)"
 
 #: ../Doc/whatsnew/2.4.rst:959
 msgid ""
@@ -1510,6 +1548,9 @@ msgid ""
 "for list comprehensions and speeds them up by about a third.  (Contributed "
 "by Raymond Hettinger.)"
 msgstr ""
+"Adicionalmente se ha agregado a un nuevo código de operación ``LIST_APPEND`` "
+"esto simplifica la generación de código a nivel de byte para las listas por "
+"comprensión y las agiliza en aproximadamente un tercio."
 
 #: ../Doc/whatsnew/2.4.rst:963
 msgid ""
@@ -1517,6 +1558,9 @@ msgid ""
 "faster bytecode; remarkably, the resulting bytecode is  more readable.  "
 "(Enhanced by Raymond Hettinger.)"
 msgstr ""
+"El optimizador de código a nivel de byte ha sido mejorado para producir "
+"código a nivel de byte mas corto y rápido. Esto resulta en código mas "
+"legible. (Contribución de Raymond Hettinger)"
 
 #: ../Doc/whatsnew/2.4.rst:967
 msgid ""
@@ -1527,6 +1571,13 @@ msgid ""
 "strings is still recommended when you want to efficiently glue a large "
 "number of strings together. (Contributed by Armin Rigo.)"
 msgstr ""
+"La concatenación de cadenas de texto en la declaración de ``s = s + \"abc"
+"\"`` and ``s += \"abc\"``ahora son ejecutadas de forma mas eficiente en "
+"ciertas circunstancias. Esta optimizaciones no serán mostradas en otras "
+"implementaciones de Python tales como Python, entonces no se debe utilizar, "
+"es mejor seguir utilizando el método :meth:`join`de cadenas de caracteres si "
+"se quiere mantener la eficiencia de concatenar un largo numero de cadenas de "
+"caracteres. (Contribución de Armin Rigo.)"
 
 #: ../Doc/whatsnew/2.4.rst:974
 msgid ""
@@ -1536,10 +1587,16 @@ msgid ""
 "used measurement of Python's performance.  Your own applications may show "
 "greater or smaller benefits from Python 2.4.)"
 msgstr ""
+"El resultado de las optimizaciones de la versión 2.4 es que tomando Python "
+"2.4 como punto de referencia corre alrededor de un 5% mas rápido que Python "
+"2.3 y un 35% mas rápido que Python 2.2 (pystone no es particularmente un "
+"buen punto de referencia pero es el mas usado para medir rendimiento en "
+"Python. Sus propias aplicaciones pueden mostrar beneficios mas grandes o "
+"mínimos desde Python 2.4)"
 
 #: ../Doc/whatsnew/2.4.rst:990
 msgid "New, Improved, and Deprecated Modules"
-msgstr ""
+msgstr "Módulos nuevos, mejorados y obsoletos"
 
 #: ../Doc/whatsnew/2.4.rst:992
 msgid ""
@@ -1549,6 +1606,12 @@ msgid ""
 "source tree for a more complete list of changes, or look through the CVS "
 "logs for all the details."
 msgstr ""
+"Como es usual, la librería estándar de Python recibió un número de mejoras y "
+"corrección de errores. Aquí hay una lista parcial de los cambios mas "
+"notables, ordenados alfabéticamente por nombre de módulo. Consulte el "
+"archivo :file:`Misc/NEWS` en la estructura del directorio para una completa "
+"lista de los cambios o se puede buscar a través del registro CVS para "
+"obtener todos los detalles."
 
 #: ../Doc/whatsnew/2.4.rst:997
 msgid ""
@@ -1556,6 +1619,9 @@ msgid ""
 "parameter that lets you perform a limited number of passes through the "
 "polling loop.  The default is still to loop forever."
 msgstr ""
+"El módulo :mod:`asyncore` y la función :func:`loop`ahora tiene un parámetro "
+"*count* que permite ejecutar un limitado numero de pases mediante el bucle. "
+"El valor predeterminado sigue siendo el bucle para siempre."
 
 #: ../Doc/whatsnew/2.4.rst:1001
 msgid ""
@@ -1563,6 +1629,10 @@ msgid ""
 "Base64, Base32, and Base16 encoding and decoding, including optional case "
 "folding and optional alternative alphabets. (Contributed by Barry Warsaw.)"
 msgstr ""
+"El modulo :mod:`base64` ahora tiene un soporte mas completo :rfc:`3548` para "
+"Base64, Base32 y  Base16 para codificación y descodificación, incluyendo "
+"procesos de convertir caracteres a minúsculas y alfabetos alternativos. "
+"(Contribución de Barry Warsaw)"
 
 #: ../Doc/whatsnew/2.4.rst:1005
 msgid ""
