--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-06-12 19:34-0300\n"
+"PO-Revision-Date: 2021-06-25 09:04-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -714,13 +714,15 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:431
 msgid "The contextlib module"
-msgstr ""
+msgstr "El módulo contextlib"
 
 #: ../Doc/whatsnew/2.6.rst:433
 msgid ""
 "The :mod:`contextlib` module provides some functions and a decorator that "
 "are useful when writing objects for use with the ':keyword:`with`' statement."
 msgstr ""
+"El módulo :mod:`contextlib` proporciona algunas funciones y un decorador que "
+"son útiles al escribir objetos para usar con la sentencia ':keyword:`with`'."
 
 #: ../Doc/whatsnew/2.6.rst:436
 msgid ""
@@ -734,6 +736,15 @@ msgid ""
 "exception raised in the block will be raised by the :keyword:`!yield` "
 "statement."
 msgstr ""
+"El decorador se llama :func:`contextmanager`, y te permite escribir una "
+"única función generadora en lugar de definir una clase nueva. El generador "
+"debería producir exactamente un valor. El código hasta :keyword:`yield` se "
+"ejecutará como el método :meth:`__enter__`, y el valor obtenido será el "
+"valor de retorno del método que se vinculará a la variable en la clausula :"
+"keyword:`!as` (si la hay) de la sentencia ':keyword:`with`'. El código "
+"después de :keyword:`!yield` se ejecutará en el método :meth:`__exit__` . "
+"Cualquier excepción lanzada en el bloque será generada por la sentencia :"
+"keyword:`!yield`."
 
 #: ../Doc/whatsnew/2.6.rst:445
 msgid ""
