--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-06-25 09:04-0300\n"
+"PO-Revision-Date: 2021-06-26 18:52-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -751,6 +751,8 @@ msgid ""
 "Using this decorator, our database example from the previous section could "
 "be written as::"
 msgstr ""
+"Usando este decorador, nuestro ejemplo de base de datos de la sección "
+"anterior podría escribirse como::"
 
 #: ../Doc/whatsnew/2.6.rst:465
 msgid ""
@@ -760,6 +762,11 @@ msgid ""
 "with`' statement both starts a database transaction and acquires a thread "
 "lock::"
 msgstr ""
+"El módulo :mod:`contextlib` también tiene una función ``nested(mgr1, "
+"mgr2, ...)``que combina varios gestores de contexto para que no necesite "
+"escribir sentencias ':keyword:`with`' anidadas. En este ejemplo, se utiliza "
+"una única sentencia ':keyword:`!with`' que inicia una transacción de base de "
+"datos y adquiere un bloqueo del hilo::"
 
 #: ../Doc/whatsnew/2.6.rst:474
 msgid ""
@@ -767,10 +774,13 @@ msgid ""
 "bound to a variable, and calls the argument's ``.close()`` method at the end "
 "of the block. ::"
 msgstr ""
+"Por último, la función :func:`close` retorna su argumento para que pueda "
+"vincularse a una variable, y llama al método ``.close()`` del argumento al "
+"final del bloque. ::"
 
 #: ../Doc/whatsnew/2.6.rst:492
 msgid ":pep:`343` - The \"with\" statement"
-msgstr ""
+msgstr ":pep:`343` - La sentencia \"with\""
 
 #: ../Doc/whatsnew/2.6.rst:489
 msgid ""
@@ -779,14 +789,18 @@ msgid ""
 "':keyword:`with`' statement, which can be helpful in learning how the "
 "statement works."
 msgstr ""
+"PEP escrito por Guido van Rossum y Nick Coghlan; implementado por Mike "
+"Bland, Guido van Rossum y Neal Norwitz. El PEP muestra el código generado "
+"para una sentencia ':keyword:`with`', que puede ser útil para aprender cómo "
+"la sentencia funciona."
 
 #: ../Doc/whatsnew/2.6.rst:494
 msgid "The documentation  for the :mod:`contextlib` module."
-msgstr ""
+msgstr "La documentación para el módulo :mod:`contextlib`."
 
 #: ../Doc/whatsnew/2.6.rst:501
 msgid "PEP 366: Explicit Relative Imports From a Main Module"
-msgstr ""
+msgstr "PEP 366: Importaciones relativas explícitas desde un módulo principal"
 
 #: ../Doc/whatsnew/2.6.rst:503
 msgid ""
@@ -794,6 +808,9 @@ msgid ""
 "ran a module that was located inside a package, relative imports didn't work "
 "correctly."
 msgstr ""
+"El modificador de Python :option:`-m` permite ejecutar un módulo como un "
+"script. Cuando ejecutabas un módulo que estaba ubicado dentro de un paquete, "
+"las importaciones relativas no funcionaban correctamente."
 
 #: ../Doc/whatsnew/2.6.rst:507
 msgid ""
@@ -801,6 +818,10 @@ msgid ""
 "When this attribute is present, relative imports will be relative to the "
 "value of this attribute instead of the :attr:`__name__` attribute."
 msgstr ""
+"La corrección para Python 2.6 agrega un atributo :attr:`__package__` a los "
+"módulos. Cuando este atributo está presente, las importaciones relativas "
+"serán relativas al valor de este atributo en lugar del atributo :attr:"
+"`__name__`."
 
 #: ../Doc/whatsnew/2.6.rst:512
 msgid ""
@@ -809,10 +830,15 @@ msgid ""
 "relative imports will now work correctly in scripts running from inside a "
 "package."
 msgstr ""
+"Las importaciones de estilo PEP 302 pueden configurar :attr:`__package__` "
+"según sea necesario. El módulo :mod:`runpy` que implementa el modificador :"
+"option:`-m` ahora hace esto, por lo que las importaciones relativas ahora "
+"funcionarán correctamente en los scripts que se ejecutan desde el interior "
+"de un paquete."
 
 #: ../Doc/whatsnew/2.6.rst:522
 msgid "PEP 370: Per-user ``site-packages`` Directory"
-msgstr ""
+msgstr "PEP 370: Directorio de ``site-packages`` por usuario"
 
 #: ../Doc/whatsnew/2.6.rst:524
 msgid ""
@@ -821,16 +847,23 @@ msgid ""
 "intended to hold locally-installed packages available to all users using a "
 "machine or a particular site installation."
 msgstr ""
+"Cuando ejecutas Python, la ruta de búsqueda del módulo ``sys.path`` "
+"generalmente incluye un directorio cuya ruta termina en ``\"site-packages"
+"\"``. Este directorio está destinado a contener paquetes instalados "
+"localmente disponibles para todos los usuarios que utilizan una máquina o un "
+"sitio de instalación en particular."
 
 #: ../Doc/whatsnew/2.6.rst:529
 msgid ""
 "Python 2.6 introduces a convention for user-specific site directories. The "
 "directory varies depending on the platform:"
 msgstr ""
+"Python 2.6 introduce una convención para directorios de sitios específicos "
+"del usuario. El directorio varía según la plataforma:"
 
 #: ../Doc/whatsnew/2.6.rst:532
 msgid "Unix and Mac OS X: :file:`~/.local/`"
-msgstr ""
+msgstr "Unix y Mac OS X: :file:`~/.local/`"
 
 #: ../Doc/whatsnew/2.6.rst:533
 msgid "Windows: :file:`%APPDATA%/Python`"
@@ -842,6 +875,9 @@ msgid ""
 "as :file:`lib/python2.6/site-packages` on Unix/Mac OS and :file:`Python26/"
 "site-packages` on Windows."
 msgstr ""
+"Dentro de este directorio, habrá subdirectorios específicos de versión, "
+"como :file:`lib/python2.6/site-packages` en Unix/Mac OS y :file:`Python26/"
+"site-packages` en Windows."
 
 #: ../Doc/whatsnew/2.6.rst:539
 msgid ""
@@ -852,20 +888,29 @@ msgid ""
 "`APPDATA` environment variable.  You can also modify the :file:`site.py` "
 "file for your Python installation."
 msgstr ""
+"Si no le gusta el directorio predeterminado, puede sobrescribirlo mediante "
+"una variable de entorno. :envvar:`PYTHONUSERBASE` establece el directorio "
+"raíz utilizado para todas las versiones de Python que admiten esta función. "
+"En Windows, el directorio de datos específicos de la aplicación se puede "
+"cambiar configurando la variable de entorno :envvar:`APPDATA`. También puede "
+"modificar el archivo :file:`site.py` para su instalación de Python."
 
 #: ../Doc/whatsnew/2.6.rst:546
 msgid ""
 "The feature can be disabled entirely by running Python with the :option:`-s` "
 "option or setting the :envvar:`PYTHONNOUSERSITE` environment variable."
 msgstr ""
+"La característica se puede desactivar por completo ejecutando Python con la "
+"opción :option:`-s` o seteando la variable de entorno :envvar:"
+"`PYTHONNOUSERSITE`."
 
 #: ../Doc/whatsnew/2.6.rst:552
 msgid ":pep:`370` - Per-user ``site-packages`` Directory"
-msgstr ""
+msgstr "PEP 370: Directorio de ``site-packages`` por usuario"
 
 #: ../Doc/whatsnew/2.6.rst:553
 msgid "PEP written and implemented by Christian Heimes."
-msgstr ""
+msgstr "PEP escrito e implementado por Christian Heimes."
 
 #: ../Doc/whatsnew/2.6.rst:561
 msgid "PEP 371: The ``multiprocessing`` Package"
@@ -879,6 +924,11 @@ msgid ""
 "pipes, synchronize their operations using locks and semaphores, and can "
 "share simple arrays of data."
 msgstr ""
+"El nuevo paquete :mod:`multiprocessing` permite a los programas de Python "
+"crear nuevos procesos que realizarán un cálculo y retornaran un resultado al "
+"padre. Los procesos padre e hijo pueden comunicarse mediante colas "
+"(*queues*) y tuberías (*pipes*), sincronizar sus operaciones mediante "
+"bloqueos y semáforos, y pueden compartir matrices simples de datos."
 
 #: ../Doc/whatsnew/2.6.rst:569
 msgid ""
@@ -891,6 +941,15 @@ msgid ""
 "can call the :meth:`is_alive` method to check whether the subprocess is "
 "still running and the :meth:`join` method to wait for the process to exit."
 msgstr ""
+"El módulo :mod:`multiprocessing` comenzó como una emulación exacta del "
+"módulo :mod:`threading` usando procesos en lugar de hilos. Ese objetivo se "
+"descartó en el camino a Python 2.6, pero el enfoque general del módulo sigue "
+"siendo similar. La clase fundamental es :class:`Process`, a la que se le "
+"pasa un objeto invocable y una colección de argumentos. El método :meth:"
+"`start` establece el invocable ejecutándose en un subproceso, después de lo "
+"cual se puede llamar al método :meth:`is_alive` para verificar si el "
+"subproceso aún se está ejecutando y al método :meth:`join` para esperar al "
+"proceso para salir."
 
 #: ../Doc/whatsnew/2.6.rst:579
 msgid ""
@@ -898,6 +957,9 @@ msgid ""
 "The function doing the calculation is written strangely so that it takes "
 "significantly longer when the input argument is a multiple of 4."
 msgstr ""
+"Aquí hay un ejemplo simple donde el subproceso calculará un factorial. La "
+"función que realiza el cálculo está escrita de forma extraña, por lo que "
+"lleva mucho más tiempo cuando el argumento de entrada es un múltiplo de 4."
 
 #: ../Doc/whatsnew/2.6.rst:616
 msgid ""
@@ -908,6 +970,12 @@ msgid ""
 "communicate.  (If the parent were to change the value of the global "
 "variable, the child's value would be unaffected, and vice versa.)"
 msgstr ""
+"Un :class:`~queue.Queue` se usa para comunicar el resultado del factorial. "
+"El objeto :class:`~queue.Queue` se almacena en una variable global. El "
+"proceso hijo usará el valor de la variable cuando se creó el hijo; porque es "
+"una :class:`~ queue.Queue`, padre e hijo pueden usar el objeto para "
+"comunicarse. (Si el padre cambiara el valor de la variable global, el valor "
+"del hijo no se vería afectado y viceversa)."
 
 #: ../Doc/whatsnew/2.6.rst:624
 msgid ""
