--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-06-26 18:52-0300\n"
+"PO-Revision-Date: 2021-07-04 18:18-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -987,6 +987,13 @@ msgid ""
 "`Pool` to spread requests across 5 worker processes and retrieve a list of "
 "results::"
 msgstr ""
+"Otras dos clases, :class:`Pool` y :class:`Manager`, proporcionan interfaces "
+"de nivel superior. :class:`Pool` creará un número fijo de procesos de "
+"trabajo, y las solicitudes se pueden distribuir a los trabajadores llamando "
+"a :meth:`apply` o :meth:`apply_async` para agregar una sola solicitud, y :"
+"meth:`map` o :meth:`map_async` para agregar una serie de solicitudes. El "
+"siguiente código usa :class:`Pool` para distribuir las solicitudes en 5 "
+"procesos de trabajo y recuperar una lista de resultados::"
 
 #: ../Doc/whatsnew/2.6.rst:642
 msgid "This produces the following output::"
@@ -1004,28 +1011,39 @@ msgid ""
 "methods also include :meth:`Lock`, :meth:`RLock`, and :meth:`Semaphore` to "
 "create shared locks.)"
 msgstr ""
+"La otra interfaz de alto nivel, la clase :class:`Manager`, crea un proceso "
+"de servidor separado que puede contener copias maestras de las estructuras "
+"de datos de Python. Luego, otros procesos pueden acceder y modificar estas "
+"estructuras de datos utilizando objetos proxy. El siguiente ejemplo crea un "
+"diccionario compartido llamando al método :meth:`dict`; los procesos de "
+"trabajo luego insertan valores en el diccionario. (El bloqueo no se realiza "
+"automáticamente, lo cual no importa en este ejemplo. Los métodos de `:Class:"
+"`Manager` también incluyen :meth:`Lock`, :meth:`RLock`, y :meth:`Semaphore` "
+"para crear bloqueos compartidos.)"
 
 #: ../Doc/whatsnew/2.6.rst:695
 msgid "This will produce the output::"
-msgstr ""
+msgstr "Esto producirá la salida::"
 
 #: ../Doc/whatsnew/2.6.rst:706
 msgid "The documentation for the :mod:`multiprocessing` module."
-msgstr ""
+msgstr "La documentación del módulo :mod:`multiprocessing`."
 
 #: ../Doc/whatsnew/2.6.rst:709
 msgid ":pep:`371` - Addition of the multiprocessing package"
-msgstr ""
+msgstr ":pep:`371` - Adición del paquete de multiprocesamiento"
 
 #: ../Doc/whatsnew/2.6.rst:709
 msgid ""
 "PEP written by Jesse Noller and Richard Oudkerk; implemented by Richard "
 "Oudkerk and Jesse Noller."
 msgstr ""
+"PEP escrito por Jesse Noller y Richard Oudkerk; implementado por Richard "
+"Oudkerk y Jesse Noller."
 
 #: ../Doc/whatsnew/2.6.rst:718
 msgid "PEP 3101: Advanced String Formatting"
-msgstr ""
+msgstr "PEP 3101: Formateo avanzado de cadena de caracteres"
 
 #: ../Doc/whatsnew/2.6.rst:720
 msgid ""
@@ -1033,6 +1051,9 @@ msgid ""
 "formatting method, :meth:`format`.  Support for the :meth:`str.format` "
 "method has been backported to Python 2.6."
 msgstr ""
+"En Python 3.0, el operador `%` se complementa con un método de formato de "
+"cadena de caracteres más potente, :meth:`format`. La compatibilidad con el "
+"método :meth:`str.format` se ha actualizado a Python 2.6."
 
 #: ../Doc/whatsnew/2.6.rst:724
 msgid ""
@@ -1040,10 +1061,14 @@ msgid ""
 "the string as a template and takes the arguments to be formatted. The "
 "formatting template uses curly brackets (`{`, `}`) as special characters::"
 msgstr ""
+"En 2.6, las cadenas de caracteres de 8 bits y Unicode tienen un método `."
+"format()` que trata la cadena como una plantilla y toma los argumentos a "
+"formatear. La plantilla de formato utiliza llaves (`{`, `}`) como caracteres "
+"especiales::"
 
 #: ../Doc/whatsnew/2.6.rst:737
 msgid "Curly brackets can be escaped by doubling them::"
-msgstr ""
+msgstr "Las llaves se pueden escapar duplicándolas::"
 
 #: ../Doc/whatsnew/2.6.rst:742
 msgid ""
@@ -1051,6 +1076,10 @@ msgid ""
 "``, ``{1}``, etc. or names of keyword arguments.  You can also supply "
 "compound field names that read attributes or access dictionary keys::"
 msgstr ""
+"Los nombres de campo pueden ser números enteros que indican argumentos "
+"posicionales, como ``{0}``, ``{1}``, etc. o nombres de argumentos de "
+"palabras clave. También puede proporcionar nombres de campos compuestos que "
+"lean atributos o accedan a claves de diccionario::"
 
 #: ../Doc/whatsnew/2.6.rst:756
 msgid ""
@@ -1060,6 +1089,11 @@ msgid ""
 "converted to an integer.  You can't write more complicated expressions "
 "inside a format string."
 msgstr ""
+"Tenga en cuenta que cuando utilice una notación de estilo diccionario como "
+"``[.mp4]``, no es necesario poner comillas alrededor de la cadena; se "
+"buscará el valor usando ``.mp4`` como clave. Las cadenas de caracteres que "
+"comienzan con un número se convertirán en entero. No puede escribir "
+"expresiones más complicadas dentro de una cadena de formato."
 
 #: ../Doc/whatsnew/2.6.rst:762
 msgid ""
@@ -1067,30 +1101,36 @@ msgid ""
 "resulting string.  The precise formatting used is also controllable by "
 "adding a colon followed by a format specifier.  For example::"
 msgstr ""
+"Hasta ahora hemos mostrado cómo especificar qué campo sustituir en la cadena "
+"resultante. El formato preciso utilizado también se puede controlar "
+"agregando dos puntos seguidos de un especificador de formato. Por ejemplo::"
 
 #: ../Doc/whatsnew/2.6.rst:776
 msgid "Format specifiers can reference other fields through nesting::"
 msgstr ""
+"Los especificadores de formato pueden hacer referencia a otros campos a "
+"través del anidamiento::"
 
 #: ../Doc/whatsnew/2.6.rst:786
 msgid "The alignment of a field within the desired width can be specified:"
 msgstr ""
+"Se puede especificar la alineación de un campo dentro del ancho deseado:"
 
 #: ../Doc/whatsnew/2.6.rst:789
 msgid "Character"
-msgstr ""
+msgstr "Carácter"
 
 #: ../Doc/whatsnew/2.6.rst:789
 msgid "Effect"
-msgstr ""
+msgstr "Efecto"
 
 #: ../Doc/whatsnew/2.6.rst:791
 msgid "< (default)"
-msgstr "< (default)"
+msgstr "< (por defecto)"
 
 #: ../Doc/whatsnew/2.6.rst:791
 msgid "Left-align"
-msgstr ""
+msgstr "Alinear a la izquierda"
 
 #: ../Doc/whatsnew/2.6.rst:792
 msgid ">"
@@ -1098,7 +1138,7 @@ msgstr ">"
 
 #: ../Doc/whatsnew/2.6.rst:792
 msgid "Right-align"
-msgstr ""
+msgstr "Alinear a la derecha"
 
 #: ../Doc/whatsnew/2.6.rst:793
 msgid "^"
@@ -1106,7 +1146,7 @@ msgstr "^"
 
 #: ../Doc/whatsnew/2.6.rst:793
 msgid "Center"
-msgstr ""
+msgstr "Centrado"
 
 #: ../Doc/whatsnew/2.6.rst:794
 msgid "="
@@ -1114,7 +1154,7 @@ msgstr "="
 
 #: ../Doc/whatsnew/2.6.rst:794
 msgid "(For numeric types only) Pad after the sign."
-msgstr ""
+msgstr "(Solo para tipos numéricos) Relleno después del signo."
 
 #: ../Doc/whatsnew/2.6.rst:797
 msgid ""
@@ -1122,12 +1162,19 @@ msgid ""
 "the value is formatted.  For example, floating-point numbers can be "
 "formatted as a general number or in exponential notation::"
 msgstr ""
+"Los especificadores de formato también pueden incluir un tipo de "
+"presentación, que controla cómo se formatea el valor. Por ejemplo, los "
+"números de punto flotante pueden formatearse como un número general o en "
+"notación exponencial::"
 
 #: ../Doc/whatsnew/2.6.rst:806
 msgid ""
 "A variety of presentation types are available.  Consult the 2.6 "
 "documentation for a :ref:`complete list <formatstrings>`; here's a sample:"
 msgstr ""
+"Hay una variedad de tipos de presentación disponibles. Consulte la "
+"documentación 2.6 para obtener una :ref:`lista completa <formatstrings>`; "
+"aquí hay un ejemplo:"
 
 #: ../Doc/whatsnew/2.6.rst:810
 msgid "``b``"
@@ -1135,7 +1182,7 @@ msgstr "``b``"
 
 #: ../Doc/whatsnew/2.6.rst:810
 msgid "Binary. Outputs the number in base 2."
-msgstr ""
+msgstr "Binario. Emite el número en base 2."
 
 #: ../Doc/whatsnew/2.6.rst:811
 msgid "``c``"
